# Qelm

./: CODE_OF_CONDUCT.md  GUI Trainer  LICENSE  QELMChatUI.py  Qelm2.py  QelmGUI.py  QelmT.py  README.md  STATUS.md  STATUS_MILESTONES.json  chat.py  gen.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: daily-status.yml  publish.yml  python-app.yml  release.yml
Benchmark/: Readme.md  benchmark_august.csv  qelm_benchmark_july.csv
Datasets/: Biology.txt  Geography.txt  History.txt  Literature.txt  Mathematics.txt  Quantum.txt  Science.txt
Documentation/: Bypassing Holevo.Doc  HolevosAlternative.doc  readme.md
Neural/: Neuron.py  Readme.md
Outdated/: Readme.md  gen.py
QLM/: July.qelm  Theoretical(100 vocab).qelm  Theoretical(100vocab) tokens.json  readme.md
QLM/Example/: 10000_tokens.json  Ex.qelm  qelm.qelm  qelm_token_map.json
Quantum/: Qelm-Quantum.py  Readme.md
Quantum/Results/: OneRun.txt
badges/: days_active.json
qelm/: __init__.py  requirements.txt
scripts/: STATUS.md  STATUS_MILESTONES.json  update_milestones.py  update_status.py
