[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qelm"
version = "0.1.0"
description = "Quantum-Enhanced Language Model"
authors = [{ name = "Brenton Carter" }]
license = "MIT"          # â† simple SPDX string; removes warning
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "qiskit-aer>=0.12",
  "qiskit>=1.0",
  "tensorflow>=2.16",
  "nltk>=3.8",
  "psutil>=5.9",
  "matplotlib>=3.8",
  "tk"
]

# NEW: tell setuptools to ship **only** the qelm package tree
[tool.setuptools]
packages = ["qelm"]              # everything inside qelm/ will be included
