[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Qelm"
version = "0.1.1"
description = "Quantum-Enhanced Language Model"
authors = [{ name = "Brenton Carter" }]
license = "MIT"   
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "qiskit-aer>=0.12",
  "qiskit>=1.0",
  "tensorflow>=2.16",
  "nltk>=3.8",
  "psutil>=5.9",
  "matplotlib>=3.8",
  "tk"
]


[tool.setuptools]
py-modules = ["Qelm"]
